<resources>
    <string name="app_name">toGo</string>
    <string name="action_settings">Settings</string>
    <string name="logoContentDescription">Splash Logo</string>
    <string name="email">Email</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="select_interpretation_language">SELECT YOUR INTERPRETATION LANGUAGE</string>
    <string name="profile">PROFILE</string>
    <string name="name">Name</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="uid">UId</string>
    <string name="nickname">Nick Name</string>
    <string name="address">Address</string>
    <string name="phonenumber">Phone Number</string>
    <string name="description">Description</string>
    <string name="bankacountdesc">Bank Account Information</string>
    <string name="cardtype">Card Type</string>
    <string name="cvv">CVV</string>
    <string name="expirydate">Expiry Date</string>
    <string name="expirymonth">Expiry Month</string>
    <string name="expiryyear">Expiry Year</string>
    <string name="cardnumber">Card Number</string>
    <string name="taxid">Tax ID / EIN</string>
    <string name="mylanguage">My Languages</string>
    <string name="city">City</string>
    <string name="zip">Postal Code</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="certificates">Certificates</string>
    <string name="selectuser">Select User Types</string>
    <string name="interpreter">INTERPRETER</string>
    <string name="user">CUSTOMER</string>
    <string name="userid">User ID</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry standard dummy text ever since the 1500s.</string>
    <string name="password">Password</string>
    <string name="btn_signIn">LOGIN</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="conntectWithText">Connect with</string>
    <string name="orText">OR</string>
    <string name="btn_register">Register Now</string>
    <string name="btn_signup">Sign Up</string>
    <string name="EmailErrorMessage">Please enter email</string>
    <string name="PasswordErrorMessage">Please enter password</string>
    <string name="PasswordNotMatchErrorMessage">Password Mismatch</string>
    <string name="CNPasswordErrorMessage">Please enter confirm password</string>
    <string name="invalid_email">Please enter valid email address</string>
    <string name="usernameErrormesseage">Please enter username</string>
    <string name="newpassworderrormsg">Please enter newpassword</string>
    <string name="missing_email">Email is missing</string>
    <string name="missing_password">Password is missing</string>
    <string name="invalid_email_password">Entered email or password are not in correct format</string>
    <string name="incorrect_email_password">Either email or password is incorrect</string>
    <string name="registerScreenTitle">Register</string>
    <string name="fnameHint">First Name</string>
    <string name="unameHint">User Name</string>
    <string name="lnameHint">Last Name</string>
    <string name="emailHint">Email</string>
    <string name="phoneHint">Phone No.</string>
    <string name="dobHint">Date Of Birth</string>
    <string name="passwordHint">Password</string>
    <string name="cpasswordHint">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="chnagepassword">Reset Password</string>
    <string name="newpasswordHint">New Password</string>
    <string name="aboutservice">Tell  us about the service( Optional )</string>
    <string name="aboutinterpreter">Tell  us about the interpreter( Optional )</string>
    <string name="network_service_message_title">Network Services</string>
    <string name="network_service_message">Network not available</string>
    <string name="Ok">OK</string>
    <string name="invalid_message">Oops! something went wrong. Please try again</string>
    <string name="no_data_received">Could not get any data from the web server</string>
    <string name="invalid_json_format">Invalid JSON format</string>
    <string name="unauthorized_access">Unauthorized Access</string>
    <string name="facebook_app_id">1634906070093280</string>
    <string name="sing_in_with_fd">Login With Facebook</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false"></string>
    <string name="location_service_message_title">Location Services</string>
    <string name="location_service_message">Kindly enable location services</string>
    <string name="device_not_supported">This device is not supported</string>
    <string name="invalid_google_play_service_found">No valid Google Play Services APK found</string>
    <string name="basic_action_1">Action_1</string>
    <string name="basic_action_2">Action_2</string>
    <string name="basic_del">Delete</string>
    <string name="str_orange">#fe7b27</string>
    <string name="str_green">#3cac69</string>
    <string name="str_red">#FF4444</string>
    <string name="str_yellow">#FFBB33</string>
    <string name="str_sky_blue">#33B5E5</string>
    <string name="forgotScreenTitle">Reset Password</string>
    <string name="forgotTxt">Just Don\'t Worry!Fill in your Email ID &amp; we will help you reset your password.</string>
    <string name="forgotemailHint">Enter your Email ID</string>
    <string name="submit">Submit</string>
    <string name="sendemail">Send Email</string>
    <string name="username_label">Username:</string>
    <string name="login_title">Log in</string>
    <string name="conference_id_label">Conference ID:</string>
    <string name="display_name_label">Display Name:</string>
    <string name="join_title">Join</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_base_url">Base URL:</string>
    <string name="app_id">App ID:</string>
    <string name="app_token">App Token:</string>
    <string name="log_level">SDK Log Level:</string>
    <string name="sdk_version">SDK Version:</string>
    <string name="authorizing">Authorizing</string>
    <string name="logging_in">Logging in</string>
    <string name="joining_av_chat">Joining AV chat</string>
    <string name="me">Me</string>
    <string name="front_camera">Front camera</string>
    <string name="back_camera">Back camera</string>
    <string name="mute_camera">Mute camera</string>
    <string name="change_camera">Change camera</string>
    <string name="resolution">Resolution</string>
    <string name="audio_routes">Audio Routes</string>
    <string name="filters">Filters</string>
    <string name="enter_session_id">Enter conference id</string>
    <string name="enter_display_name">Enter display name</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_conference_id_and_display_name">Please enter conference id and display name</string>
    <string name="enter_username_toast">Please enter username</string>
    <string name="no_internet">No Internet Connection. Please check your internet connection or try again later.</string>
    <string name="enter_conference_id">Enter conference ID</string>
    <string name="wrong_conference_id">Conference ID is not valid</string>
    <string name="enter_conference_display_name">Please enter display name</string>
    <string name="session_id">Session ID</string>
    <string name="info_participants">Participants info</string>
    <string name="menu_information">Information</string>
    <string name="join_session">Join Session</string>
    <string name="display_name_too_long">Display name is too long</string>
    <string name="wrong_username_id">Username is not valid</string>
    <string name="video_cannot_be_viewed">Video cannot be viewed!</string>
    <string name="device_is_not_supported">Device is not supported!</string>
    <string name="start_call_title">Call</string>
    <string name="call_receiver_label">Call receiver Id:</string>
    <string name="enter_receiver_id">Enter receiver Id</string>
    <string name="enter_call_receiver">Enter call receiver</string>
    <string name="ok">Ok</string>
    <string name="selectProfilePicTitle">Choose profile Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="add_title">Add</string>
    <string name="call_receivers">Call receivers:</string>
    <string name="calling">Calling</string>
    <string name="answer">Answer</string>
    <string name="decline">Decline</string>
    <string name="no_receivers">Please add or enable up to 4 receivers!</string>
    <string name="room_title">Room</string>
    <string name="make_call_title">Make call</string>
    <string name="use_custom_render">Use custom video render</string>
    <string name="min_username_length">username must contain at least 6 characters</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="push_title">Push</string>
    <string name="send_title">Send</string>
    <string name="enter_push_receiver">Enter push receiver</string>
    <string name="push_receivers">Push notification receivers:</string>
    <string name="enter_text_push">Enter text to push</string>
    <string name="all_receivers_offline">All receivers offline</string>
    <string name="fail_to_send_message">Sending of message fail</string>
    <string name="push_notification_sent">Push notification sent</string>
    <string name="push_notification_error">Error sending push notification</string>
    <string name="unknown">Unknown camera</string>
    <string name="unsubscribe_title">Unsubscribe</string>
    <string name="user_unsubscribed">User unsubscribed</string>
    <string name="user_unsubscribe_error">Error to unsubscribe</string>
    <string name="no_token_to_unsubscribe">There is no token to unsubscribe</string>
    <string name="characters_missing">Characters missing</string>
    <string name="user_offline">User %s is offline</string>
    <string name="title_activity_to_go">ToGoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login_with_linked_in">LoginWithLinkedInActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_customer_dash_board">CustomerDashBoardActivity</string>
    <string name="title_activity_uer_type">UerTypeActivity</string>
    <string name="complete_profile_title">Complete Profile Info</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="interpretfrom">Interpretetion From</string>
    <string name="interpretto">Interpretetion To</string>
    <string name="duration">Duration</string>
    <string name="amount">Amount</string>
    <string name="my_language">My Languages</string>
    <string name="change_password">Change Password</string>
    <string name="email_feedback">Email Feedback</string>
    <string name="interpreter_hint">Interpreter</string>
    <string name="pick_date">Pick a Date Range</string>
    <string name="chat_history">CHAT HISTORY</string>
    <string name="back">Back</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="call_duration">Call Duration</string>
    <string name="settings">SETTINGS</string>
    <string name="set_your_preferred_languages">Set Your Preferred Language</string>
    <string name="application_action">Application Action</string>
    <string name="preferred_languages">Preferred Language</string>
    <string name="status">Status</string>
    <string name="notification">Notification</string>
</resources>