<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View style="@style/view_five_pixel" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/orange"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/settings"
        android:textColor="@color/tw__solid_white"
        android:textSize="@dimen/profiletextsize" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="left|center"
        android:padding="10dp"
        android:visibility="gone"
        android:text="@string/set_your_preferred_languages"
        android:textSize="@dimen/twenty_two_sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/five_dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="left|center"
            android:padding="10dp"
            android:text="@string/preferred_languages"
            android:textSize="@dimen/profiletextsize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dropdown"
                android:orientation="horizontal"
                android:padding="2dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:padding="@dimen/threeDp"
                    android:src="@drawable/default_pic" />

                <TextView
                    android:id="@+id/language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:padding="@dimen/tendp"
                    android:text="@string/my_language"
                    android:textColor="@color/tw__solid_white"
                    android:textSize="@dimen/normaltextsize" />
            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="100dp"></ListView>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="left|center"
        android:padding="10dp"
        android:layout_marginTop="@dimen/tendp"
        android:text="@string/application_action"
        android:textSize="@dimen/twenty_two_sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/ten"
        android:visibility="gone"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/status_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="left|center"
            android:padding="10dp"
            android:text="@string/status"
            android:textSize="@dimen/profiletextsize" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/toggle_on" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/tendp"
        android:visibility="gone"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/notification" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="left|center"
            android:padding="10dp"
            android:text="@string/notification"
            android:textSize="@dimen/profiletextsize" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/toggle_on" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/tendp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/change_password" />

        <TextView
            android:id="@+id/changepassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="left|center"
            android:padding="10dp"
            android:text="@string/change_password"
            android:textSize="@dimen/profiletextsize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/tendp"
        android:visibility="gone"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/email_feedback" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="left|center"
            android:padding="10dp"
            android:text="@string/email_feedback"
            android:textSize="@dimen/profiletextsize" />

    </LinearLayout>
</LinearLayout>
