<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/default_pic"
                android:paddingTop="30dp"
                android:paddingBottom="10dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/logoContentDescription"/>

            <LinearLayout
                android:id="@+id/signupLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_below="@+id/imageView1"
                android:layout_margin="10dp">






                <View style="@style/view_20" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/text_field"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="5dp"
                        android:src="@drawable/password_icon" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/email"
                        android:hint="@string/passwordHint"

                        android:inputType="textPassword"
                        style="@style/LoginEditTextStyle"
                        android:singleLine="true"></EditText>
                </LinearLayout>

                <View style="@style/view_20" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/text_field"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="5dp"
                        android:src="@drawable/password_icon" />

                    <EditText
                        android:id="@+id/cpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/email"
                        android:hint="@string/cpasswordHint"

                        android:inputType="textPassword"
                        style="@style/LoginEditTextStyle"
                        android:singleLine="true"></EditText>
                </LinearLayout>


                <View style="@style/view_20" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/text_field"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="5dp"
                        android:src="@drawable/password_icon" />

                    <EditText
                        android:id="@+id/newpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/email"
                        android:hint="@string/newpasswordHint"

                        android:inputType="textPassword"
                        style="@style/LoginEditTextStyle"
                        android:singleLine="true"></EditText>
                </LinearLayout>


                <View style="@style/view_20" />

                <Button
                    android:id="@+id/btnChnagepassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:text="@string/chnagepassword"
                    android:textColor="@color/tw__solid_white"
                    android:layout_marginTop="20dp"/>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
